# Manager

./: CMakeLists.txt
func/: mytest.cpp
inc/: basetype.h  mytest.h
src/: main.cpp
tests/: CMakeLists.txt  test_mate.cc
